# aidlc

./: .gitignore  ARCHITECTURE.md  BRAINDUMP.md  CHANGELOG.md  CLEANUP_SUMMARY.md  DESIGN.md  Makefile  README.md  ROADMAP.md  coverage.json  pyproject.toml
.aidlc/: config.json
aidlc/: __main__.py  _git_repos.py  _proc.py  audit_models.py  audit_schemas.py  auditor.py  claude_cli.py  claude_cli_metadata.py  claude_command.py  claude_failures.py  claude_stream.py  cli_commands.py  cli_parser.py  config.py  config_detect.py  context_prep.py  context_utils.py  discovery.py  discovery_prompt.py  doc_gap_detector.py  finalize_prompts.py  finalizer.py  implementer.py  implementer_autosync.py  implementer_finalize.py  implementer_helpers.py  implementer_issue_execution.py  implementer_issue_order.py  implementer_sessions.py  implementer_settings.py  implementer_signals.py  implementer_targeted_tests.py  implementer_workspace.py  improve.py  issue_model.py  logger.py  models.py  paths.py  plan_session.py  plan_templates.py  (+22 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  COVERAGE_PLAN.md  DESIGN.md  MIGRATION-existing-projects.md  README.md  ROADMAP.md  audit.md  cli-lifecycle.md  configuration.md  deployment.md  deprecations.md  large-files.md  limitations.md  local-development.md
tests/: test___main___coverage.py  test_accounts_manager_extra.py  test_audit_full_runtime_coverage.py  test_audit_quick_engine_coverage.py  test_audit_schemas_parse.py  test_auditor.py  test_claude_adapter_health.py  test_claude_cli.py  test_cli_accounts_coverage.py  test_cli_commands_coverage.py  (+66 more)
(+42 files in other folders)
